syntax = "proto3";

package loanpb;

option go_package = "proto/loanpb";

import "google/api/annotations.proto";

service LoanService {
    //create a new loan
    rpc CreateLoan(CreateLoanRequest) returns (CreateLoanResponse){
        option (google.api.http) = {
            post: "/v1/loans"
            body: "*"
        };
    }
 // Get loan by ID
    rpc GetLoan(GetLoanRequest) returns (GetLoanResponse){
        option (google.api.http) = {
            get: "/v1/loans/{id}"
        };
    }

}

message CreateLoanRequest {
    int64 book_id = 1;
    int64 user_id = 2;
}

message CreateLoanResponse{
     int64 id = 1;
    int64 book_id = 2;
    int64 user_id = 3;
    string status = 4;
}

message GetLoanRequest{
    int64 id = 1;
}

message GetLoanResponse{
    int64 id = 1;
    int64 book_id = 2;
    int64 user_id = 3;
    string status = 4;
}